# virtual_maize_field

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: format.yml  ros-humble-ign-test.yaml  ros-humble-test.yaml  ros-iron-test.yaml  ros-jazzy-gz-test.yaml  ros-noetic-test.yaml  ros-rolling-gz-test.yaml  ros-rolling-test.yaml  ros-rolling.yaml  ros.yml
config/: fre21_task_1.yaml  fre21_task_1_fast.yaml  fre21_task_1_mini.yaml  fre21_task_2.yaml  fre21_task_2_fast.yaml  fre21_task_2_mini.yaml  fre21_task_3.yaml  fre21_task_3_fast.yaml  fre21_task_3_mini.yaml  fre21_task_4.yaml  fre21_task_4_fast.yaml  fre21_task_4_mini.yaml  fre22_task_mapping.yaml  fre22_task_mapping_fast.yaml  fre22_task_mapping_mini.yaml  fre22_task_navigation.yaml  fre22_task_navigation_fast.yaml  fre22_task_navigation_mini.yaml
generated_models/maize_001_day_025/: model.config  model.sdf
generated_models/maize_001_day_030/: model.config  model.sdf
generated_models/maize_001_day_035/: model.config  model.sdf
generated_models/maize_001_day_040/: model.config  model.sdf
generated_models/maize_001_day_045/: model.config  model.sdf
generated_models/maize_001_day_050/: model.config  model.sdf
generated_models/maize_001_day_055/: model.config  model.sdf
generated_models/maize_001_day_060/: model.config  model.sdf
generated_models/maize_001_day_065/: model.config  model.sdf
generated_models/maize_001_day_070/: model.config  model.sdf
generated_models/maize_001_day_075/: model.config  model.sdf
generated_models/maize_001_day_080/: model.config  model.sdf
generated_models/maize_001_day_085/: model.config  model.sdf
generated_models/maize_001_day_090/: model.config  model.sdf
generated_models/maize_001_day_095/: model.config  model.sdf
generated_models/maize_001_day_100/: model.config  model.sdf
generated_models/maize_002_day_025/: model.config  model.sdf
generated_models/maize_002_day_030/: model.config  model.sdf
generated_models/maize_002_day_035/: model.config  model.sdf
generated_models/maize_002_day_040/: model.config  model.sdf
generated_models/maize_002_day_045/: model.config  model.sdf
generated_models/maize_002_day_050/: model.config  model.sdf
generated_models/maize_002_day_055/: model.config  model.sdf
generated_models/maize_002_day_060/: model.config  model.sdf
generated_models/maize_002_day_065/: model.config  model.sdf
generated_models/maize_002_day_070/: model.config  model.sdf
generated_models/maize_002_day_075/: model.config  model.sdf
generated_models/maize_002_day_080/: model.config  model.sdf
generated_models/maize_002_day_085/: model.config  model.sdf
generated_models/maize_002_day_090/: model.config  model.sdf
generated_models/maize_002_day_095/: model.config  model.sdf
generated_models/maize_002_day_100/: model.config  model.sdf
generated_models/maize_003_day_025/: model.config  model.sdf
generated_models/maize_003_day_030/: model.config  model.sdf
hooks/: resource_paths.dsv.in  resource_paths.sh
launch/: jackal_simulation.launch  rviz.launch  rviz.launch.py  simulation.launch  simulation.launch.py
map/: driving_pattern.txt
models/ale/: model.config  (+1 more)
rviz/: config.rviz
scripts/: create_task_1_fast.sh  create_task_1_mini.sh  create_task_3_fast.sh  create_task_3_mini.sh  field.world.template  field_2d_generator.py
src/: check_for_updates.py
test/: test_config.py  test_config.text  test_generate_from_config.py
virtual_maize_field/: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  check_for_updates.py  generate_world.py  package.xml
virtual_maize_field/launch/: .simple_world.launch.swp  simple_world.launch  simulation.launch
virtual_maize_field/map/: driving_pattern.txt  example_pred_map.csv  markers.csv
virtual_maize_field/meshes/maize/: maize.readme  maize_01.dae  maize_02.dae
virtual_maize_field/models/ale/: model.config  model.sdf
virtual_maize_field/models/ale/meshes/: ale.dae
virtual_maize_field/models/coke_can/: model.sdf
virtual_maize_field/models/location_marker_a/: model.sdf
virtual_maize_field/models/location_marker_b/: model.sdf
virtual_maize_field/models/maize_01/: model.config  model.sdf
virtual_maize_field/models/maize_02/: model.config  model.sdf
virtual_maize_field/models/maize_02/meshes/: maize_02.dae
virtual_maize_field/models/nettle/: model.config  model.sdf
virtual_maize_field/models/nettle/materials/scripts/: nettle.material
virtual_maize_field/models/qr_location_marker/: model.config  model.sdf
virtual_maize_field/models/qr_location_marker/materials/scripts/: qr_location_marker.material
virtual_maize_field/models/retro_pepsi_can/: model.config  model.sdf
virtual_maize_field/models/retro_pepsi_can/meshes/: retro_pepsi_can.dae
virtual_maize_field/models/start/materials/scripts/: start.material
virtual_maize_field/models/stone_01/: model.config  model.sdf
virtual_maize_field/models/stone_01/meshes/: stone_01.mtl
virtual_maize_field/models/stone_02/: model.config
virtual_maize_field/models/stone_02/meshes/: stone_02.mtl
virtual_maize_field/models/unknown_weed/: model.config  model.sdf
virtual_maize_field/scripts/: compare_maps.py  create_task_1.sh  create_task_1_mini.sh  create_task_2.sh  create_task_2_mini.sh  create_task_3.sh  create_task_3_mini.sh  create_task_4.sh  create_task_4_mini.sh  detection_spawner.py  field.world.template  field_2d_generator.py  generate_world.py  geometry.py  row_sections.py  row_segments.py  utils.py  world_description.py
virtual_maize_field/world_generator/: field.world.template  field_2d_generator.py  models.py  robot_spawner.launch.py.template  row_segments.py  world_description.py
virtual_maize_field/world_generator/segments/: __init__.py  base.py  curve.py  island.py  sincurve.py  straight.py
virtual_maize_field/worlds/: simple_row_level_0.world  simple_row_level_1.world  simple_row_level_2.world  simple_row_level_3.world  simple_row_level_4.world  simple_row_level_5.world  simple_row_level_6.world
(+235 files in other folders)
