<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>virtual_maize_field</name>
  <version>4.2.1</version>
  <description>A virtual maize field for agricultural robot simulation in Gazebo.</description>

  <maintainer email="info@fieldrobot.com">Field Robot Event Organization</maintainer>

  <license file="LICENSE">GPLv3</license>
  <url type="website">https://www.fieldrobot.com/event/</url>

  <depend>python3-rospkg</depend>
  <depend>python3-jinja2</depend>
  <depend>python3-opencv</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-shapely</depend>
  <depend>python3-packaging</depend>
  <depend>python3-yaml</depend>

  <depend>ros2launch</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
