<?xml version="1.0"?>
<package format="3">
  <name>virtual_maize_field</name>
  <version>4.7.2</version>
  <description>A virtual maize field for agricultural robot simulation in Gazebo.</description>

  <maintainer email="info@fieldrobot.com">Field Robot Event Organization</maintainer>

  <license file="LICENSE">GPLv3</license>
  <url type="website">https://www.fieldrobot.com/event/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <!-- On ROS Melodic or lower you have to install some deps by hand. See README.md. -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-jinja2</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-shapely</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-packaging</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
         GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
         the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
