<?xml version="1.0"?>
<package format="2">
  <name>virtual_maize_field</name>
  <version>2.0.0</version>
  <description>A virtual maize field for agricultural robot simulation in Gazebo.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fre@todo.todo">fre</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>
  <url type="website">https://www.fieldrobot.com/event/</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python3-jinja2</exec_depend> <!-- Ubuntu 20.04 with noetic. If melodic see readme. -->

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
         GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
         the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
